Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82053

QtHttpServer crashes when CONNECT method is used

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 6.0
    • Network: HTTP
    • None
    • 4b87afbbe6132b03d114cce1cbb7958cf1f3bac8

    Description

      QtHttpServer crashes with the request like below

      #include <QCoreApplication>
      #include <QTcpSocket>

      int main(int argc, char *argv[])

      { QCoreApplication app(argc, argv); QTcpSocket socket; socket.connectToHost("localhost", 8080); socket.waitForConnected(); socket.write("CONNECT / HTTP/1.1\n\n"); socket.waitForBytesWritten(); return 0; }

      Attachments

        For Gerrit Dashboard: QTBUG-82053
        # Subject Branch Project Status CR V

        Activity

          People

            tasuku.suzuki Tasuku Suzuki
            tasuku.suzuki Tasuku Suzuki
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes