src/httpserver/qabstracthttpserver.cpp
@@ -116,8 +116,8 @@ void QAbstractHttpServerPrivate::handleReadyRead(QTcpSocket *socket,
                 return;
             }
 #endif
+            qCWarning(lcHttpServer, "Upgrade to %s not supported", it.value().second.constData());
         }
-        qCWarning(lcHttpServer, "Upgrade to %s not supported", it.value().second.constData());
         socket->disconnectFromHost();
         return;
     }
